+++++++++++
Python News
+++++++++++

What's New in Python 3.1.4?
===========================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #8020: Avoid a crash where the small objects allocator would read
  non-Python managed memory while it is being modified by another thread.
  Patch by Matt Bandy.

- Issue #8278: On Windows and with a NTFS filesystem, os.stat() and os.utime()
  can now handle dates after 2038.

- Issue #4236: PyModule_Create2 now checks the import machinery directly
  rather than the Py_IsInitialized flag, avoiding a Fatal Python
  error in certain circumstances when an import is done in __del__.

- Issue #10596: Fix float.__mod__ to have the same behaviour as
  float.__divmod__ with respect to signed zeros.  -4.0 % 4.0 should be
  0.0, not -0.0.

- Issue #5587: add a repr to dict_proxy objects.  Patch by David Stanek and
  Daniel Urban.

Library
-------

- Issue #10875: Update Regular Expression HOWTO; patch by 'SilentGhost'.

- Issue #10869: Fixed bug where ast.increment_lineno modified the root
  node twice.

- Issue #5871: email.header.Header.encode now raises an error if any
  continuation line in the formatted value has no leading white space
  and looks like a header.  Since Generator uses Header to format all
  headers, this check is made for all headers in any serialized message
  at serialization time.  This provides protection against header
  injection attacks.

- Issue #7858: Raise an error properly when os.utime() fails under Windows
  on an existing file.

- Issue #3839: wsgiref should not override a Content-Length header set by
  the application.  Initial patch by Clovis Fabricio.

- Issue #10790: email.header.Header.append's charset logic now works correctly
  for charsets whose output codec is different from its input codec.

- Issue #6643: Reinitialize locks held within the threading module after fork
  to avoid a potential rare deadlock or crash on some platforms.
